# arkit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/arkit/: Cargo.toml
crates/arkit/src/: context.rs  effect.rs  lib.rs  lifecycle.rs  logging.rs  ohos.rs  overlay.rs  owner.rs  portal.rs  route.rs  route_animated.rs  router.rs  runtime.rs  signal.rs
crates/arkit/src/component/: mod.rs  render.rs
crates/arkit/src/view/: core.rs  element.rs  mod.rs
crates/arkit/src/view/components/: button.rs  calendar_picker.rs  checkbox.rs  checkbox_group.rs  column.rs  container.rs  control_flow.rs  custom.rs  custom_span.rs  date_picker.rs  embedded_component.rs  flex.rs  flow_item.rs  grid.rs  grid_item.rs  image.rs  image_animator.rs  image_span.rs  list.rs  list_item.rs  list_item_group.rs  loading_progress.rs  mod.rs  progress.rs  radio.rs  refresh.rs  relative_container.rs  row.rs  scope.rs  scroll.rs  slider.rs  span.rs  stack.rs  swiper.rs  text.rs  text_area.rs  text_input.rs  text_picker.rs  time_picker.rs  toggle.rs  (+4 more)
crates/arkit_animation/: Cargo.toml
crates/arkit_animation/src/: lib.rs
crates/arkit_core/: Cargo.toml
crates/arkit_core/src/: lib.rs
crates/arkit_derive/: Cargo.toml
crates/arkit_derive/src/: lib.rs
crates/arkit_futures/: Cargo.toml
crates/arkit_futures/src/: lib.rs
crates/arkit_i18n/: Cargo.toml
crates/arkit_i18n/src/: lib.rs
crates/arkit_i18n/tests/: macro_usage.rs
crates/arkit_i18n/tests/locales/: en-US.ftl  zh-CN.ftl
crates/arkit_i18n_macros/: Cargo.toml
crates/arkit_i18n_macros/src/: lib.rs
crates/arkit_icon/: Cargo.toml
crates/arkit_icon/src/: embed.rs  icon.rs  lib.rs
crates/arkit_router/: Cargo.toml
crates/arkit_router/src/: lib.rs
crates/arkit_runtime/: Cargo.toml
crates/arkit_runtime/src/: application.rs  application_runtime.rs  entry.rs  lib.rs  widget_api.rs
crates/arkit_shadcn/: Cargo.toml
crates/arkit_shadcn/src/: lib.rs  styles.rs  theme.rs
crates/arkit_shadcn/src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  basic.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  data.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  floating_layer.rs  form.rs  hover_card.rs  input.rs  input_otp.rs  label.rs  menu_common.rs  menubar.rs  mod.rs  navigation.rs  navigation_menu.rs  overlays.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  (+16 more)
crates/arkit_widget/: Cargo.toml
crates/arkit_widget/src/: internal.rs  lib.rs  overlay.rs  render_impl.rs
crates/arkit_widget/src/render_impl/: component.rs  factories.rs  layout_observer.rs  lazy.rs  mount.rs  mounted.rs  native_node.rs  node_core.rs  node_effects.rs  node_events.rs  node_layout.rs  node_specialized.rs  node_style.rs  node_widget.rs  patch_helpers.rs  reconcile.rs  runtime.rs  tests.rs  tree_compile.rs  types.rs  virtual_adapter.rs  webview_controller.rs  webview_native.rs  webview_sync.rs
crates/arkit_widget/src/render_impl/component/: component_effects.rs  component_events.rs  component_specialized.rs  component_style.rs
docs/: design-analysis.md  index.md  popup-overlay-redesign.md
docs/.vitepress/: config.mts
docs/examples/: async-task.md  counter.md  i18n.md  index.md  router.md  shadcn-showcase.md  webview.md
docs/guide/: application-model.md  architecture.md  arkts-integration.md  async-workflows.md  first-feature.md  getting-started.md  i18n-workflows.md  project-structure.md  router-workflows.md  ui-workflows.md  webview-workflows.md
examples/async_task/: Cargo.toml
examples/async_task/src/: lib.rs
examples/complex_cases/: Cargo.toml
examples/complex_cases/src/: lib.rs
examples/counter/: Cargo.toml
examples/counter/src/: lib.rs
examples/counter/src/showcase/: PIXEL_TASKS.md  component.rs  constants.rs  home.rs  layout.rs  mod.rs
examples/counter/src/showcase/examples/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  icon.rs  input.rs  label.rs  menubar.rs  mod.rs  popover.rs  progress.rs  radio_group.rs  select.rs  separator.rs  shared.rs  skeleton.rs  switch.rs  table.rs  tabs.rs  text.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs
examples/i18n/: Cargo.toml
examples/i18n/locales/: en-US.ftl  zh-CN.ftl
examples/i18n/src/: lib.rs
examples/router/: Cargo.toml
examples/router/src/: components.rs  lib.rs  routes.rs
examples/router/src/pages/: home.rs  mod.rs  not_found.rs  settings.rs  user.rs
examples/shadcn_showcase/: Cargo.toml  PIXEL_TASKS.md
examples/shadcn_showcase/src/: lib.rs
examples/shadcn_showcase/src/showcase/: component.rs  constants.rs  home.rs  layout.rs  mod.rs
examples/shadcn_showcase/src/showcase/examples/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  icon.rs  input.rs  label.rs  menubar.rs  mod.rs  popover.rs  progress.rs  radio_group.rs  select.rs  separator.rs  shared.rs  skeleton.rs  switch.rs  table.rs  tabs.rs  text.rs  textarea.rs  toggle.rs  toggle_group.rs  tooltip.rs
examples/webview/: Cargo.toml
examples/webview/src/: lib.rs
