[workspace]
members = [
    "crates/arkit",
    "crates/arkit_core",
    "crates/arkit_animation",
    "crates/arkit_derive",
    "crates/arkit_futures",
    "crates/arkit_icon",
    "crates/arkit_i18n",
    "crates/arkit_i18n_macros",
    "crates/arkit_router",
    "crates/arkit_runtime",
    "crates/arkit_widget",
    "crates/arkit_shadcn",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
arkit = { path = "crates/arkit" }
arkit_core = { path = "crates/arkit_core" }
arkit_animation = { path = "crates/arkit_animation" }
arkit_derive = { path = "crates/arkit_derive" }
arkit_futures = { path = "crates/arkit_futures" }
arkit_icon = { path = "crates/arkit_icon" }
arkit_i18n = { path = "crates/arkit_i18n" }
arkit_i18n_macros = { path = "crates/arkit_i18n_macros" }
arkit_router = { path = "crates/arkit_router" }
arkit_runtime = { path = "crates/arkit_runtime" }
arkit_widget = { path = "crates/arkit_widget" }
arkit_shadcn = { path = "crates/arkit_shadcn" }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "time"] }

syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"


openharmony-ability = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }
openharmony-ability-derive = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }

ohos-arkui-binding = { path = "../ohos-native-bindings/crates/arkui", default-features = false, features = ["napi", "image"] }
ohos-display-binding = { git = "https://github.com/ohos-rs/ohos-native-bindings.git", branch = "feat-component" }
ohos-hilog-binding = { git = "https://github.com/ohos-rs/ohos-native-bindings.git", branch = "feat-component" }
