[package]
name = "arkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["api-22"]
api-22 = ["ohos-arkui-binding/api-22"]

[dependencies]
arkit_derive.workspace = true
arkit_router.workspace = true


napi-ohos = { version = "1.1", features = ["napi8"] }
napi-derive-ohos = "1.1"
ohos-arkui-binding = { workspace = true, default-features = false, features = [
    "napi",
] }
ohos-arkui-sys = { path = "/Users/ranger/Desktop/project/ohos-rs/ohos-native-bindings/sys/ohos-arkui-sys", features = ["api-22"] }
ohos-hilog-binding.workspace = true
openharmony-ability = { workspace = true }
