[package]
name = "arkit_widget"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["api-22"]
api-22 = ["ohos-arkui-binding/api-22", "ohos-arkui-binding/drawing"]
webview = [
    "dep:openharmony-ability",
    "dep:napi-ohos",
    "dep:http",
    "openharmony-ability/webview",
    "openharmony-ability/drag_and_drop",
]

[dependencies]
arkit_core.workspace = true
arkit_runtime.workspace = true
ohos-arkui-binding.workspace = true
ohos-display-binding.workspace = true
ohos-hilog-binding.workspace = true
openharmony-ability = { workspace = true, optional = true }
napi-ohos = { version = "1.1", features = ["napi8"], optional = true }
http = { version = "1", optional = true }
