[package]
name = "shadcn_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arkit.workspace = true
arkit_icon.workspace = true
arkit_shadcn.workspace = true
napi-ohos = { version = "1.1", features = ["napi8"] }
napi-derive-ohos = "1.1"
ohos-hilogs-sys = { path = "/Users/ranger/Desktop/project/ohos-rs/ohos-native-bindings/sys/ohos-hilogs-sys", features = ["api-22"] }

[build-dependencies]
napi-build-ohos = "1.1"
