[package]
name = "shadcn_showcase"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arkit.workspace = true
arkit_icon.workspace = true
arkit_shadcn.workspace = true
napi-ohos = { version = "1.1", features = ["napi8"] }
napi-derive-ohos = "1.1"
ohos-hilog-binding.workspace = true

[build-dependencies]
napi-build-ohos = "1.1"
